player list as observable collection applying filter but only returning one item

--- a/DayZServer/ServerHistory.xaml
+++ b/DayZServer/ServerHistory.xaml
@@ -284,7 +284,7 @@
                         <!--<TextBlock Name="countdown" Foreground="YellowGreen" Height="16" Width="100" Margin="353,0,-244,23" Grid.Row="1"/>-->
 
                     </Grid>
-                    <TextBlock Height="32" VerticalAlignment="Top" Foreground="YellowGreen" Width="293" HorizontalAlignment="Left" Margin="260,18,0,0"><Run Text="Refresh in  " FontSize="14" /><Run Name="countdown" Foreground="YellowGreen" FontSize="30" /><Run Text=" seconds" Foreground="YellowGreen" FontSize="14" /><!--<Run Text="{Binding Value, ElementName=RefreshSlider}" />--></TextBlock>
+                    <TextBlock Height="32" VerticalAlignment="Top" Foreground="YellowGreen" Width="293" HorizontalAlignment="Left" Margin="260,18,0,0"><Run Text="Refresh Rate (Seconds)  " FontSize="14" /><!--<Run Name="countdown" Foreground="YellowGreen" FontSize="30" /><Run Text=" seconds" Foreground="YellowGreen" FontSize="14" />--><!--<Run Text="{Binding Value, ElementName=RefreshSlider}" />--></TextBlock>
                     <Canvas x:Name="browse_dialog" Height="207"  Width="516" Background="#FF78A41E" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="510,-232,511,102" >
                         <Button x:Name="cancel_button" Content="Cancel" Canvas.Left="364" Canvas.Top="160" Width="142" Height="37" Click="cancel_click" FontSize="18" BorderBrush="{x:Null}" Background="#FFBAF344"/>
                         <TextBox Height="66" Canvas.Left="10" TextWrapping="Wrap" Text="Browse and find the location of DayZ.exe and try again. &#xA;The game should be in the steam folder &#xA;\Steam\SteamApps\common\DayZ\DayZ.exe" Canvas.Top="50" Width="496" Background="{x:Null}" Foreground="White" FontSize="16" BorderBrush="{x:Null}"/>
@@ -320,7 +320,7 @@
         </Border>
 
         <Border Background="White" DockPanel.Dock="Right">
-            <DataGrid  Name="serverList"  EnableColumnVirtualization="True" DataContext="{Binding RelativeSource={RelativeSource AncestorType=Window}}" ItemsSource="{Binding ServerList}" EnableRowVirtualization="True"  SelectedIndex="{Binding AssetMainGridSelectedIndex,Mode=TwoWay}" CanUserAddRows="False"  GridLinesVisibility="None" CanUserReorderColumns="True" CanUserResizeColumns="True" CanUserResizeRows="False" CanUserSortColumns="True" BorderBrush="{x:Null}" DockPanel.Dock="Top" HorizontalGridLinesBrush="{x:Null}" VerticalGridLinesBrush="{x:Null}" SelectionMode="Single" SelectionUnit="CellOrRowHeader">
+            <DataGrid  Name="serverList"  EnableColumnVirtualization="True" DataContext="{Binding RelativeSource={RelativeSource AncestorType=Window}}"  EnableRowVirtualization="True"  SelectedIndex="{Binding AssetMainGridSelectedIndex,Mode=TwoWay}" CanUserAddRows="False"  GridLinesVisibility="None" CanUserReorderColumns="True" CanUserResizeColumns="True" CanUserResizeRows="False" CanUserSortColumns="True" BorderBrush="{x:Null}" DockPanel.Dock="Top" HorizontalGridLinesBrush="{x:Null}" VerticalGridLinesBrush="{x:Null}" SelectionMode="Single" SelectionUnit="CellOrRowHeader">
                 <DataGrid.CellStyle>
                     <Style TargetType="DataGridCell">
                         <Setter Property="BorderThickness" Value="0"/>
@@ -435,10 +435,12 @@
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                     </DataGridTemplateColumn>
-                    <DataGridTemplateColumn Header="Ping" Width="80"  SortMemberPath="PingSpeed" SortDirection="Descending">
+                    <DataGridTemplateColumn Header="Ping" Width="80"  SortMemberPath="PingSpeed">
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding PingSpeed, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" Foreground="#747576" Cursor="AppStarting" FontSize="14" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                <TextBlock Text="{Binding PingSpeed, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" Foreground="#747576" Cursor="AppStarting" FontSize="14" HorizontalAlignment="Center" VerticalAlignment="Center">
+                                   
+                                </TextBlock>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                     </DataGridTemplateColumn>
