--- a/DayZServer/ServerHistory.xaml
+++ b/DayZServer/ServerHistory.xaml
@@ -37,7 +37,7 @@
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="RepeatButton">
-                        <Border SnapsToDevicePixels="True" Background="YellowGreen"  BorderThickness="1" BorderBrush="YellowGreen" Height="3"/>
+                        <Border SnapsToDevicePixels="True" Background="Black"  BorderThickness="1" BorderBrush="Black" Height="3"/>
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
@@ -68,7 +68,7 @@
                 </Grid.RowDefinitions>
                 <TickBar  x:Name="TopTick"  Fill="LightGray" VerticalAlignment="Top"   SnapsToDevicePixels="True" Grid.Row="0" Placement="Top" Height="5" Visibility="Visible"/>
                 <Border BorderBrush="LightGray"  BorderThickness="0,0,0,1" ></Border>
-                <Border x:Name="TrackBackground" VerticalAlignment="Center" Margin="0,-10,0,0" BorderBrush="Black" Background="Black" Height="3"   Grid.Row="1"  BorderThickness="1"/>
+                <Border x:Name="TrackBackground" VerticalAlignment="Center" Margin="0,-10,0,0" BorderBrush="YellowGreen" Background="YellowGreen" Height="3"   Grid.Row="1"  BorderThickness="1"/>
                 <Track Grid.Row="1" x:Name="PART_Track" Margin="0,-10,0,0"  >
                     <Track.DecreaseRepeatButton>
                         <RepeatButton Style="{StaticResource SliderRepeatButton1}"  Command="Slider.DecreaseLarge" />
@@ -280,7 +280,7 @@
                         <StackPanel Grid.Row="0" Orientation="Horizontal">
 
                         </StackPanel>
-                        <Slider Style="{StaticResource Horizontal_Slider}" IsSnapToTickEnabled="True" x:Name="RefreshSlider" Grid.Row="1" Minimum="1" SmallChange="1" Value="{Binding Path=MeasureGap, Mode=TwoWay}" Maximum="60" TickFrequency="3" />
+                        <Slider Style="{StaticResource Horizontal_Slider}" IsSnapToTickEnabled="True" x:Name="RefreshSlider" Grid.Row="1" Minimum="1" SmallChange="1" Value="{Binding Path=MeasureGap, Mode=TwoWay}" Maximum="60" TickFrequency="3" IsDirectionReversed="True" />
                         <!--<TextBlock Name="countdown" Foreground="YellowGreen" Height="16" Width="100" Margin="353,0,-244,23" Grid.Row="1"/>-->
 
                     </Grid>
